# PSTL

./: .gitignore  CMakeLists.txt  README.md
cmake/: CheckGpuFlags.cmake  FindTBB.cmake  PreventInSourceBuilds.cmake
include/xstd/: algorithm.hpp  range.hpp  stop_watch.hpp  strided.hpp  zip.hpp
scripts/: sae_submit.sh
src/: CMakeLists.txt
test/: CMakeLists.txt  helpers.hpp  runall.sh  stl_sort.cpp  stl_vector.cpp  strided_range.cpp  strided_stride.cpp  web_example.cpp  zip_iterator.cpp
